
		share/innocent-pear/doge-03.cc :
		- merged doge-04.cc into this file
		- separated out the calls to rofl<...>::memset(...) from
		  the routines that do other things
		- rofl<...>::memset(...) should now be called more often too

		share/innocent-pear/doge-04.cc :
		- renamed from share/innocent-pear/doge-05.cc; the original
		  doge-04.cc was merged into doge-03.cc

		share/innocent-pear/sleepier.cc :
		- sleepier_t::sleepiest() now no longer bails out if the
		  file to be removed no longer exists

2016-08-14	Scrambling of (some) data sections, finally.

		share/innocent-pear/doge.ld :
		- initial version

		bin/innocent-pear-c++.cc :
		- now scrambles .rodata and .data sections by way of bin/
		  innocent-pear-doge
		- now uses share/innocent-pear/doge.ld

		bin/innocent-pear-dogecoin.cc :
		- now emits section names of the form .innocent_pear.
		  dogecoin.* rather than .rodata.innocent_pear.dogecoin.*
		- now no longer sorts new sections by name, this being done
		  in share/innocent-pear/doge.ld

		share/innocent-pear/calm.cc :
		- now uses bin/innocent-pear-dogecoin if assembler pass is
		  given `--Xinnocent-pear=doge'

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-03.cc ,
		share/innocent-pear/doge-05.cc ,
		share/innocent-pear/doge-98.cc ,
		share/innocent-pear/doge-99.cc :
		- updated to handle scrambled .rodata and .data sections, as
		  well as absolute relocations

		GNUmakefile :
		- added share/innocent-pear/doge.ld as a dependency

		README.md :
		- well, there goes one bug...

2016-08-12	"Biochemistry is the study of carbon compounds that crawl."

		lolwutconf/ :
		- bumped to 4de7cac154

		configure :
		- modified to use conf_bfd_chk_exists()

		.gitignore :
		- added innocent-pear-dogecoin

2016-08-09	"Going the speed of light is bad for your age."

		bin/innocent-pear-dogecoin.cc :
		- initial version; for later use

		GNUmakefile :
		- changed to compile and install bin/innocent-pear-dogecoin
		  properly
